css/views.css
.msgboxmonit {
    margin: 0 auto 20px;
    width: 700px;
    padding: 11px 0;
    font-size: 11px;
    text-align: center;
    font-family: "Trebuchet MS", Tahoma, Arial, Helvetica, sans-serif;
    font-weight: bold;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    -o-border-radius: 7px;
    -moz-box-shadow: 0px 1px 3px #888;
    -webkit-box-shadow: 0px 1px 3px #888;
    box-shadow: 0px 1px 3px #888;
    /* Anciens navigateurs */
    -o-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -webkit-background-size: 100% 100%;
    background-size: 100% 100%;
 }

 .msgboxmonit-red {
    border: 1px red solid;
    background-color: #FDD;
    background-image: -webkit-gradient(linear,left top, left bottom,from(#FEE),to(#FDD));
    background-image: -webkit-linear-gradient(top,#FEE,#FDD);
    background-image: -moz-linear-gradient(top,#FEE,#FDD);
    background-image: -o-linear-gradient(top,#FEE,#FDD);
    background-image: linear-gradient(top,#FEE,#FDD);
 }

  .msgboxmonit-orange {
    border: 1px orange solid;
    background-color: #FFD;
    background-image: -webkit-gradient(linear,left top, left bottom,from(#FFE),to(#FFD));
    background-image: -webkit-linear-gradient(top,#FFE,#FFD);
    background-image: -moz-linear-gradient(top,#FFE,#FFD);
    background-image: -o-linear-gradient(top,#FFE,#FFD);
    background-image: linear-gradient(top,#FFE,#FFD);
 }

 .msgboxmonit-green {
    border: 1px #659900 solid;
    background-color: #DFD;
    background-image: -webkit-gradient(linear,left top, left bottom,from(#EFE),to(#DFD));
    background-image: -webkit-linear-gradient(top,#EFE,#DFD);
    background-image: -moz-linear-gradient(top,#EFE,#DFD);
    background-image: -o-linear-gradient(top,#EFE,#DFD);
    background-image: linear-gradient(top,#EFE,#DFD);
 }

 .msgboxmonit-grey {
    border: 1px #CCC solid;
    background-color: #DDD;
    background-image: -webkit-gradient(linear,left top, left bottom,from(#FFF),to(#DDD));
    background-image: -webkit-linear-gradient(top,#FFF,#DDD);
    background-image: -moz-linear-gradient(top,#FFF,#DDD);
    background-image: -o-linear-gradient(top,#FFF,#DDD);
    background-image: linear-gradient(top,#FFF,#DDD);
}


/*td > input[type=radio] {
	padding: 0;
	margin: 0;
	float: left;
	position: absolute;
	left: 0;
	opacity: 0;
}

td > label {
   width: 60px;
   text-align: center;
   line-height: 18px;
   display: inline-block;
   border: 1px solid transparent;
}*/

td:not(#foo) > input:hover + label, td:not(#foo) > input:focus + label,
td:not(#foo) > input + label:hover, td:not(#foo) > input:focus + label {
   background-color: #e1d39e;
   border: 1px solid #a99f78;
}

/* Checked styles */
td:not(#foo) > input[type=radio]:checked + label {
   background-color: #e1d39e;
   border: 1px solid #a99f78;
}

.storage {
    margin: 0px auto 20px;
    padding: 11px 0;
    font-size: 10px;
    text-align: center;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    -o-border-radius: 7px;
    -moz-box-shadow: 0px 1px 3px #888;
    -webkit-box-shadow: 0px 1px 3px #888;
    box-shadow: 0px 1px 3px #888;
    /* Anciens navigateurs */
    -o-background-size: 100% 100%;
    -moz-background-size: 100% 100%;
    -webkit-background-size: 100% 100%;
    background-size: 100% 100%;
    position: absolute;
 }

/* set task's comments to monospace and left align */
.fusinv_task_comment {
   width: 500px;
   max-width: 500px;
   text-align: left;
   font-family: monospace;
}



/*
 * The following css is used with elements from PluginFusioninventoryCommonView
 */

.fusinv_panel {
   width: 90%;
   background: #EFEFEF;
   padding: 10px;
   border: #AAA solid 1px;
   border-radius: 5px;
   margin: 0 auto;
}

.fusinv_form {
    width: 50%;
    margin: 0 auto;
    display: inline-block;
    vertical-align: top;
}

.fusinv_form.large {
   width: 100%;
}

.fusinv_form label,
.fusinv_form input ,
.fusinv_form textarea
{
    display: inline-block;
}

.fusinv_form label
{
    width: 30%;
    text-align: right;
    vertical-align:top;
    padding:2px;
    /*border-top: solid 1px #ccc;*/
    /*border-bottom: solid 1px #ccc;*/
    margin-bottom: 1%;
}

.fusinv_form .input_wrap.split_column {
   padding: 5px;
   width:45%;
   margin-right: 5px;
}

.fusinv_form div.input_wrap {
    margin: 0 0 0 0;
    margin-bottom: 5px;
    display: inline-block;
    width:60%;
    text-align: left;
}

/*.fusinv_form label + div.input_wrap > span +i input,*/
.fusinv_form label + div.input_wrap > input,
.fusinv_form label + div.input_wrap > select,
.fusinv_form label + div.input_wrap > textarea,
.fusinv_form label + div.input_wrap > div > textarea {
    width:100%;
    padding: 2px;
    border: 1px solid #ccc;
    border-top: solid 1px #ccc;
    max-width: 100%;
    box-sizing: border-box;
}

.expanding-wrapper {
   width: 100%;
   max-height: 100px;
}

.fusinv_form label + div.input_wrap.datetime input[type="text"],
.fusinv_form label + div.input_wrap input[type="checkbox"]
{
    width: auto;
}

.taskjob_item {
   display: inline-block;
   margin: 2px;
   padding: 2px;
   border: 1px #e0e0e0 solid;
   border-radius: 3px;
   background-color: #e7e7e7;
}

.taskjob_item.new {
   background-color: #FDDB6F;
}

.taskjob_item:hover {
   border-color: #CCC;
   box-shadow: 0 0 2px #CCC;
   background-color: #D7D7D7;
   color: black;
   font-weight: bolder;
}

#joblogs_block {
   width: 90%;
   text-align: left;
   padding: 10px;
   margin: 0 auto;
}

#joblogs_block li.job_info {
   border: #AAA solid 1px;
   border-radius: 5px;
   background: #EFEFEF;
   padding: 10px;
   margin-bottom:10px;
}

.agents_block {
   display: none;
}

#joblogs_block li.job_info > h3 {
   margin: 0;
}

.job_target {
   border: #CCC solid 1px;
   border-radius: 5px;
   background: #F7F7F7;
   padding: 10px;
   margin: 5px 0;
}
.job_target h4 {
   margin:0;
   padding-bottom: 3px;
   margin-bottom: 5px;
   border-bottom: 1px dotted #ccc;
}

div.fold {
    display: inline-block;
    background-image: url('../pics/toggle-expand.png');
    width: 16px;
    height: 16px;
    vertical-align: bottom;
}

div.fold.expanded {
    background-image: url('../pics/toggle.png');
}

.job_target h4 > a {
   font-size: inherit;
}

.job_target div.stats {
   display: block;
   margin: 0 auto;
}

/*
.job_target ul {
    margin: 0;
    padding: 0;
    width: 80%;
    display: block;
}
*/

.job_target > div {
   margin: 0 auto;
   text-align: center;
}

.job_target > div.stats > div {
   margin: 2px;
   padding: 2px;
   border-radius: 3px;
   background: #CCC;
   color: #777;
   display: inline-block;
   width: 30%;
   font-style: italic;
   font-size:80%;
   padding-left: 5px;
   text-align: left;
   font-family: monospace;
}


.job_agents span.agents_success,
.job_target > div.stats > .agents_success {
   color: green;
   background: #AAFFAA;
   font-weight: bolder;
   font-style: normal;
}

.job_agents span.agents_error,
.job_target > div.stats > .agents_error {
   color: white;
   background: red;
   font-weight: bolder;
   font-style: normal;
}

.job_agents span.agents_running,
.job_target > div.stats > .agents_running {
   color: #000077;
   background: #AAAAFF;
   font-weight: bolder;
   font-style: normal;
}


.job_agents span.agents_prepared,
.job_target > div.stats > .agents_prepared,
.job_agents span.agents_cancelled,
.job_target > div.stats > .agents_cancelled,
.job_agents span.agents_notdone,
.job_target > div.stats > .agents_notdone {
   color: black;
   background: #CCC;
   font-weight: bolder;
   font-style: normal;
}

.job_agents span {
   border-radius: 3px;
   padding: 5px 10px;
   right:0;
   vertical-align: middle;
   display: inline-block;
   background: #FFFFFF;
   font-size: xx-small;
}

.job_agents li {
   border-radius: 3px;
   border: 1px solid #ccc;
   background: #F7F7F7;
   margin-top: 5px;
}

.agent_block {
   padding: 10px;
}

.runs_block {
   background: white;
   border-top: 1px solid #ccc;
   display:none;
}

.run_block {
   padding: 10px;
}

.run_block h4 {
   margin: 0;
   font-family: monospace;
   border-bottom: 1px dotted black;
}

.run_block table {
   border-bottom: 1px dotted #ccc;
   border-collapse:collapse;
   width: 100%;
}

.run_block .logs_block {
 /*  display:none; */
}

.run_block table tr {
   width: 100%;
   margin: 5px 0;
}

.run_block table tr > td {
   border-bottom: 1px solid #ccc;
   padding: 5px;
   vertical-align: top;
   width: 20%;
   margin: 3px 0;
}
.run_block table tr > td.log_state {
   width: 10%;
}

.run_block .log_state span {
   display: block;
   text-align: center;
   background: #F1F1F1;
   border-radius: 3px;
   border: 1px solid #DDD;
   color: #777;
}

.run_block span.log_error {
   background: #F22;
   color: white;
   font-weight: bolder;
   border-color: #F66;
}

.run_block span.log_ok {
   border-radius: 3px;
   border-color: #6F6;
   background: #AFA;
   color: green;
   font-weight: bolder;
}

.run_block table tr > td.log_comment {
   /* border: 1px solid #CCC; */
   width: 70%;
   min-width: 70%;
   font-family: monospace;
}

